[gd_scene load_steps=7 format=3 uid="uid://bhiu1cinswagq"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_f7f65"]
[ext_resource type="Script" path="res://entities/player/player_camera.gd" id="2_6c8cd"]
[ext_resource type="ArrayMesh" uid="uid://ewk0cdv5i8to" path="res://entities/player/assets/car_sedan.tres" id="2_nwf6s"]
[ext_resource type="ArrayMesh" uid="uid://bl1jwyiu8bepx" path="res://entities/player/assets/car_sedan_wheel.tres" id="3_efubp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hp5on"]
size = Vector3(2.2, 2, 5)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_omogh"]
properties/0/path = NodePath(".:engine_force")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:brake")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:steering")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:scale")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:rotation")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:position")
properties/5/spawn = true
properties/5/replication_mode = 1

[node name="Player" type="VehicleBody3D"]
center_of_mass_mode = 1
center_of_mass = Vector3(0, -0.1, 0)
script = ExtResource("1_f7f65")
engine_force_value = 80.0
max_speed = 400.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-5, 0, -4.37114e-07, 0, 5, 0, 4.37114e-07, 0, -5, 0, 0.5, 0)
mesh = ExtResource("2_nwf6s")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
shape = SubResource("BoxShape3D_hp5on")

[node name="WheelFrontLeft" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0.5, -1.25)
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.5
wheel_radius = 0.35
wheel_friction_slip = 3.0
suspension_stiffness = 30.0
suspension_max_force = 10000.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="WheelFrontLeft"]
transform = Transform3D(-5, 7.54979e-07, -3.30012e-14, 0, -2.18557e-07, -5, -7.54979e-07, -5, 2.18557e-07, 0, 0, 0)
mesh = ExtResource("3_efubp")
skeleton = NodePath("")

[node name="WheelBackLeft" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0.5, 1.25)
use_as_traction = true
wheel_roll_influence = 0.5
wheel_radius = 0.35
wheel_friction_slip = 3.0
suspension_stiffness = 30.0
suspension_max_force = 10000.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="WheelBackLeft"]
transform = Transform3D(-5, 4.37114e-07, -1.91069e-14, -7.7647e-22, -2.18557e-07, -5, -4.37114e-07, -5, 2.18557e-07, 0, 0, 0)
mesh = ExtResource("3_efubp")
skeleton = NodePath("")

[node name="WheelFrontRight" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0.5, -1.25)
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.5
wheel_radius = 0.35
wheel_friction_slip = 3.0
suspension_stiffness = 30.0
suspension_max_force = 10000.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="WheelFrontRight"]
transform = Transform3D(5, 0, 0, 0, -2.18557e-07, -5, 0, 5, -2.18557e-07, 0, 0, 0)
mesh = ExtResource("3_efubp")
skeleton = NodePath("")

[node name="WheelBackRight" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0.5, 1.25)
use_as_traction = true
wheel_roll_influence = 0.5
wheel_radius = 0.35
wheel_friction_slip = 3.0
suspension_stiffness = 30.0
suspension_max_force = 10000.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="WheelBackRight"]
transform = Transform3D(5, 0, 0, 0, -2.18557e-07, -5, 0, 5, -2.18557e-07, 0, 0, 0)
mesh = ExtResource("3_efubp")
skeleton = NodePath("")

[node name="Camera3D" type="Camera3D" parent="." node_paths=PackedStringArray("follow_this")]
transform = Transform3D(1, 0, 0, 0, 0.974347, 0.225053, 0, -0.225053, 0.974347, 0, 4, 6)
top_level = true
current = true
script = ExtResource("2_6c8cd")
target_distance = 8.0
target_height = 5.0
follow_this = NodePath("..")

[node name="HUD" type="CanvasLayer" parent="."]
layer = 2

[node name="SpeedLabel" type="Label" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "100 Km/H"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_omogh")
